syntax = "proto2";

package test_required;

message TestRequired {
    required bool b = 5;
}
